--- a/app/composer.json
+++ b/app/composer.json
@@ -14,7 +14,8 @@
         }
     ],
     "require": {
-        "phpmailer/phpmailer": "^6.7"
+        "phpmailer/phpmailer": "^6.7",
+      "ext-mbstring": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "9.6"
