--- a/app/config.json
+++ b/app/config.json
@@ -3,7 +3,7 @@
   "db": {
     "banco_ambiente_local": "solicita_cidadao_presidente_prudente",
     "banco_ambiente_prod": "",
-    "banco_ambiente_teste": "solicita_cidadao_presidente_prudente_teste"
+    "banco_ambiente_teste": ""
   },
   "usuarios_banco": {
     "banco_ambiente_local": {
